@@ -15,12 +15,6 @@ requests on graphics and other content move to the forum
 
 (-) New graphic style of bottompanel (layout + images)
 
-======== to be done for release 0.8 ====================================
-
-(-) level Climbing:
-    why do both locks disappear on one key use?
-    switched-off ladder disappears
-
 ======== Code ==========================================================
 
 (-) web: add SF logo to phpBB3
